@@ -52,7 +52,6 @@ Feature: DRb Server Integration
       I'm loading all the heavy stuff...
       """
 
-  @in_progress
   Scenario: Feature Failing with --drb flag
     Given a file named "features/step_definitions/all_your_steps_are_belong_to_us.rb" with:
     """
